--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
 
         <nav class="nav">
             <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Produtos</a></li>
-                <li><a href="">Sobre</a></li>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#produtos">Produtos</a></li>
+                <li><a href="#sobre">Sobre</a></li>
             </ul>
 
-            <button id="login_bttn">LOGIN</button>
+            <button id="login_bttn"><a href="login.html">LOGIN</a></button>
         </nav>
     </header>
 
     <main class="main">
-        <section>
-            <h2>Bem-vindos a Anjos-Pipas! As Pipas mais estilosas e criativas da internet são encontradas aqui!</h2>
+        <section id="inicio">
+            <h2>Bem-vindo a Anjos-Pipas! As Pipas mais estilosas e criativas da internet são encontradas aqui!</h2>
             <p>Navegue por nossa seleção exclusiva de pipas artesanais, feitas com materiais de alta qualidade e designs únicos que vão encantar crianças e adultos, e descubra a alegria de soltar pipas com estilo!</p>
         </section>
 
-        <section>
+        <section id="produtos">
             <h2>Nosso catalógo de Pipas:</h2>
 
             <div class="container-lista_pipas" id="listaPipas"></div>
 
         </section>
 
-        <section>
+        <section id="sobre">
             <h2>Sobre nós</h2>
             <p>A Anjos Pipas é uma loja dedicada a oferecer pipas artesanais de alta qualidade, combinando tradição e criatividade para proporcionar momentos inesquecíveis aos nossos clientes. Nossa missão é espalhar alegria e diversão através do simples ato de soltar pipas, promovendo a conexão com a natureza e incentivando atividades ao ar livre para todas as idades.</p>
         </section>
