--- a/cadastros/cadastro_pipas.html
+++ b/cadastros/cadastro_pipas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Pipas</title>
-    <link rel="stylesheet" href="../css/admin.css">
+    <link rel="stylesheet" href="../css/cadastro_relatorio_pipas.css">
 </head>
 
 <body>
