admin.html e estilização
Feito.

--- a/admin.html
+++ b/admin.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Acess</title>
+    <title>Admin Acess diogo</title>
+    <link rel="stylesheet" href="/css/admin.css">
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <div class="logo">Anjos Pipas - Painel Administrativo</div>
+
+    </header>
+
+    <main class="main">
+
+        <section>
+            <h2>Bem-vindo ao Painel Administrativo</h2>
+            <p>Gerencie os cadastros e relatórios do sistema da sua loja de pipas. Use os atalhos abaixo para acessar
+                rapidamente cada módulo.</p>
+        </section>
+
+        <section class="container-lista_pipas">
+            <div class="card">
+
+                <h3>Cadastrar Pipas</h3>
+                <p>Cadastre novas pipas com nome, cor, tamanho e preço.</p>
+                <a href="cadastros/cadastro_pipas.html" class="btn">Acessar</a>
+            </div>
+
+            <div class="card">
+
+                <h3>Cadastrar Clientes</h3>
+                <p>Gerencie os clientes cadastrados e seus dados de contato.</p>
+                <a href="cadastros/cadastro_clientes.html" class="btn">Acessar</a>
+            </div>
+
+            <div class="card">
+
+                <h3>Cadastrar Pedidos</h3>
+                <p>Adicione e visualize pedidos realizados por seus clientes.</p>
+                <a href="cadastros/cadastro_pedidos.html" class="btn">Acessar</a>
+            </div>
+
+            <div class="card">
+
+                <h3>Relatórios das Pipas</h3>
+                <p>Visualize relatórios de clientes, pedidos e pipas cadastradas.</p>
+                <a href="relatorios/relatorio_pipas.html" class="btn">Acessar</a>
+            </div>
+
+            <div class="card">
+
+                <h3>Relatórios dos Clientes</h3>
+                <p>Visualize relatórios de clientes, pedidos e pipas cadastradas.</p>
+                <a href="relatorios/relatorio_clientes.html" class="btn">Acessar</a>
+            </div>
+
+            <div class="card">
+
+                <h3>Relatórios dos Pedidos</h3>
+                <p>Visualize relatórios de clientes, pedidos e pipas cadastradas.</p>
+                <a href="relatorios/relatorio_pedidos.html" class="btn">Acessar</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Anjos Pipas - Painel Administrativo</p>
+    </footer>
+
 </body>
+
 </html>
