--- a/admin.html
+++ b/admin.html
@@ -40,9 +40,10 @@
 
             <div class="card">
 
-                <h3>Cadastrar Pedidos</h3>
-                <p>Adicione e visualize pedidos realizados por seus clientes.</p>
-                <a href="cadastros/cadastro_pedidos.html" class="btn">Acessar</a>
+                <h3>Inicío</h3>
+                <p>Volte para a Landing Page</p>
+                <br>
+                <a href="index.html" class="btn">Acessar</a>
             </div>
 
             <div class="card">
