--- a/cadastros/cadastro_pipas.html
+++ b/cadastros/cadastro_pipas.html
@@ -16,7 +16,6 @@
             <ul>
                 <li><a href="cadastro_pipas.html">Cadastrar pipas</a></li>
                 <li><a href="cadastro_clientes.html">Cadastrar clientes</a></li>
-                <li><a href="cadastro_pedidos.html">Cadastrar pedidos</a></li>
                 <li><a href="../admin.html">Admin</a></li>
                 <li><a href="../relatorios/relatorio_clientes.html">Relatório Clientes</a></li>
                 <li><a href="../relatorios/relatorio_pedidos.html">Relatório Pedidos</a></li>
@@ -54,7 +53,7 @@
     </main>
 
     <footer class="footercp">
-        Painel administrativo - Anjos Pipas
+        <p>© 2025 Anjos Pipas - Painel Administrativo</p>
     </footer>
 
     <script src="../js/pipas.js"></script>
