--- a/relatorios/relatorio_pipas.html
+++ b/relatorios/relatorio_pipas.html
@@ -10,16 +10,16 @@
 <body>
 
     <header class="headercp">
-        <h1>Relatório de Pipas</h1>
+        <h1>Painel Administrativo - Relatório de Pipas</h1>
 
         <nav>
             <ul>
-                <li><a href="../cadastros/cadastro_pipas.html">Cadastrar Pipas</a></li>
-                <li><a href="../cadastros/cadastro_clientes.html">Cadastrar Clientes</a></li>
-                <li><a href="../cadastros/cadastro_pedidos.html">Cadastrar Pedidos</a></li>
-                <li><a href="relatorio_pipas.html">Relatório de Pipas</a></li>
-                <li><a href="../index.html">Página Inicial</a></li>
+                <li><a href="../cadastros/cadastro_pipas.html">Cadastrar pipas</a></li>
+                <li><a href="../cadastros/cadastro_clientes.html">Cadastrar clientes</a></li>
                 <li><a href="../admin.html">Admin</a></li>
+                <li><a href="relatorio_clientes.html">Relatório Clientes</a></li>
+                <li><a href="relatorio_pedidos.html">Relatório Pedidos</a></li>
+                <li><a href="relatorio_pipas.html">Relatório Pipas</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
     <main class="maincp">
 
         <section class="secao-listacp">
-            <h2>Pipas cadastradas</h2>
+            <h2>Pipas Cadastradas</h2>
 
             <div class="tabela-container">
                 <table class="tabela-relatorio">
@@ -49,7 +49,7 @@
     </main>
 
     <footer class="footercp">
-        Painel administrativo - Anjos Pipas
+        <p>© 2025 Anjos Pipas - Painel Administrativo</p>
     </footer>
 
     <script src="../js/relatorios.js"></script>
