--- a/cadastros/cadastro_pipas.html
+++ b/cadastros/cadastro_pipas.html
@@ -36,7 +36,7 @@
                 <input type="number" id="precoPipacp" required>
 
                 <label>Imagem (caminho local):</label>
-                <input type="text" id="imgPipacp" placeholder="img/pipa1.jpg" required>
+                <input type="text" id="imgPipacp" placeholder="img/1.jpg" required>
 
                 <button type="submit" class="btncp">Cadastrar Pipa</button>
 
