--- a/cadastros/cadastro_pedidos.html
+++ b/cadastros/cadastro_pedidos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Finalizar Pedido</title>
-  <link rel="stylesheet" href="/css/pedidos.css">
+  <link rel="stylesheet" href="../css/pedidos.css">
 </head>
 
 <body>
