--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
         <p>© 2025 Anjos Pipas — Todos os direitos reservados</p>
     </footer>
 
-    <script src="../js/login.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
