--- a/relatorios/relatorio_pedidos.html
+++ b/relatorios/relatorio_pedidos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Relatório de Pedidos</title>
-  <link rel="stylesheet" href="/css/relatoriospedidos.css">
+  <link rel="stylesheet" href="../css/relatoriospedidos.css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
     <p>© 2025 Anjos Pipas - Painel Administrativo</p>
   </footer>
 
-  <script src="/js/relatoriopedidos.js"></script>
+  <script src="../js/relatoriopedidos.js"></script>
 </body>
 
 </html>
